--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,9 +5,6 @@
     <title>main page</title>
 </head>
 <body>
-  <div style="background: aqua">Layer # 1 </div>
-  <div style="background: #a600ff">Layer # 2 </div>
-  <div style="background: #ffd500">Layer # 3 </div>
-
+<p>Hi from html file</p>
 </body>
 </html>
