--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,31 @@
     <title>main page</title>
 </head>
 <body>
-<p>Hi from html file</p>
+<p>Hi from server HTML currency file</p>
+
+
+<p>Select currency</p>
+
+
+<form action="currency" method="get">
+    <label for="code">Choose currency:</label>
+    <select name="code" id="code">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="RUB">RUB</option>
+        <option value="ALL">Send all</option>
+    </select>
+    <h5>INPUT YOUR EMAIL:</h5>
+    <input type="email" name="email" required> <br>
+    <input type="submit" value="send">
+</form>
+
+<form action="currency" method="post">
+
+    <h5>INPUT YOUR EMAIL TO GET ALL CURRENCIES:</h5>
+    <br>
+    <input type="email" name="email" required>
+    <input type="submit" value="send">
+</form>
 </body>
 </html>
