--- a/src/main/webapp/manager.html
+++ b/src/main/webapp/manager.html
@@ -5,12 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+PLACEHOLDER
+<h1> View <a href='/general'>all dogs</a></h1>
 <p>Select dog id</p>
 
-<form action="dog" method="post">
+<form action="manager" method="post">
     <input type="number" name="dog-id">
     <input type="submit" value="confirm">
 </form>
+
 </body>
 </html>
