--- a/src/main/webapp/manager.html
+++ b/src/main/webapp/manager.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-PLACEHOLDER
-<h1> View <a href='/general'>all dogs</a></h1>
+123456
+<h1> View <a href='/manager'>all dogs</a></h1>
 <p>Select dog id</p>
 
-<form action="manager" method="post">
+<form action="manager" method="get">
     <input type="number" name="dog-id">
     <input type="submit" value="confirm">
 </form>
